--- a/css/sobre.css
+++ b/css/sobre.css
@@ -1,40 +1,140 @@
-body{
+body {
+    font-size: 16px;
+    line-height: 1.5;
     font-family: Helvetica, "Lucida Grande" sans-serif;
-    width: 940px;
+    width: 80%;
     margin-left: auto;
     margin-right: auto;
 
 }
-.título{
+
+.título {
     color: #3d3d3d;
     background-color: #e1edf2;
     padding: 10px;
 }
-.subtítulo{
-      border-bottom: 2px solid black;
+
+.subtítulo {
+    border-bottom: 2px solid black;
 }
-    
-    figure {
-      text-align: center;
-    
-      background-color: whitesmoke;
-      border: 2px solid lightgrey
-      padding: 15px;
-      margin: 30px;
-    }
-    figcaption{
-        margin-top: 10px;
-    }
-    #figuraMatriz{
+
+figure {
+    max-width: 100%;
+    box-sizing: border-box;
+
+    text-align: center;
+
+    background-color: whitesmoke;
+    border: 2px solid lightgrey padding: 15px;
+    margin: 30px;
+}
+
+figcaption {
+    margin-top: 10px;
+}
+
+#figuraMatriz {
     width: 550px;
     margin: 0 auto;
-    }
-    #figurafamília{
-     width:375px;
-     float: right;
-    }
+}
 
-    figure img{
+#figurafamília {
+    width: 375px;
+    float: right;
+}
+
+figure img {
     height: inherit;
     width: inherir;
+}
+
+.contato__subtitulo {
+    display: inline;
+}
+
+.contato__secao {
+    display: inline-block;
+    vertical-align: top;
+    margin-left: 16px;
+}
+
+.contato__secao--telefone {
+    margin-left: 32px;
+}
+
+.contato__info {
+    margin: 16px 0 24px;
+    padding-left: 32px;
+}
+
+.contato__info-titulo,
+.contato__info-descricao {
+    display: inline;
+}
+
+.contato__info-descricao {
+    margin-left: 10px;
+}
+
+.rodape {
+    padding: 1.75em 0;
+
+    font-size: 1.1rem;
+}
+
+.rodape__logo {
+    width: 6em;
+}
+
+.rodape__copyright {
+    display: inline;
+    margin-left: 1em;
+}
+
+@media (max-width: 850px) {
+
+    .contato__secao {
+        display: block;
+        margin-left: 1em;
     }
+
+}
+
+@media (max-width: 622px) {
+
+    .familia-tupfeln {
+        float: none;
+        margin: 0 auto;
+    }
+
+}
+
+@media (max-width: 446px) {
+
+    .contato__subtitulo {
+        display: block;
+        margin-bottom: 0;
+    }
+
+    .contato__info {
+        padding-left: 5px;
+
+        font-size: .92em;
+
+        border-left: 2px solid lightgray;
+    }
+
+    .rodape {
+        font-size: .92em;
+    }
+
+}
+
+@media (max-width: 342px) {
+
+    .contato__info-descricao {
+        display: block;
+        margin-left: 1em;
+    }
+
+}
