(planos, videos, container, newsletter, rodape, cursos).css

--- a/css/cabecalho.css
+++ b/css/cabecalho.css
@@ -1,4 +1,8 @@
 .cabecalho {
+     position: absolute;
+     top: 0;
+     width: 100%;
+     box-sizing: border-box;
      text-align: center;
      font-size: 0.6rem;
      font-weight: bold;
@@ -6,7 +10,7 @@
      letter-spacing: 0.23em;
 
      color: #fff;
-     background-color: #2D5377;
+
 }
 
 .cabecalho__logo {
@@ -58,12 +62,5 @@
 
      .cabecalho__item-menu--matricular a {
           padding: 1.8em 3.5em;
-     }
-}
-
-@media (min-width: 1066px) {
-     .cabecalho {
-          padding-left: calc((100% - 960px) / 2);
-          padding-right: calc((100% - 960px) / 2);
      }
 }
